<resources>
    <string name="welcome_greeting">Welcome to Knowledge Hub</string>
    <string name="app_name">Knowledge Hub</string>
    <string name="btn">Let\'s GO</string>
    <string name="android_dev">App Dev\n(Android)</string>
    <string name="ios_dev">App Dev\n(IOS)</string>
    <string name="web_dev">Web Dev</string>
    <string name="ml">Machine Learning</string>
    <string name="blockchain">Blockchain</string>
    <string name="devops">DEVOPS</string>
    <string name="btn2">CALL US</string>
    <string name="firstCard_screen2_heading">Android App Development</string>
    <string name="secondCard_screen2_heading">IOS App Development</string>
    <string name="thirdCard_screen2_heading">Web Development</string>
    <string name="thirdCard_screen2_Screen3_heading">Frontend Development</string>
    <string name="thirdCard_screen2_Screen4_heading">Backend Development</string>
    <string name="fourthCard_screen2_heading">Machine Learning</string>
    <string name="fifthCard_screen2_heading">Blockchain</string>
    <string name="sixthCard_screen2_heading">DEVOPS</string>
    <string name="java">JAVA</string>
    <string name="kotlin">KOTLIN</string>
    <string name="database">DATABASE</string>
    <string name="git">GIT</string>
    <string name="oop">OOP</string>
    <string name="for_more_visit_https_roadmap_sh_android">For more Visit:- <u>https://roadmap.sh/android</u></string>
    <string name="for_more_visit_https_roadmap_sh_frontend">For more Visit:- <u>https://roadmap.sh/frontend</u></string>
    <string name="for_more_visit_https_roadmap_sh_backend">For more Visit:- <u>https://roadmap.sh/backend</u></string>
    <string name="for_more_visit_https_redblink_com_learn_ios_development">For more Visit:- <u>https://redblink.com/learn-ios-development/</u></string>
    <string name="swift">SWIFT</string>
    <string name="swift_ui">SWIFT UI</string>
    <string name="frontend_developer">FRONTEND\nDEVELOPMENT</string>
    <string name="backend_developer">BACKEND\nDEVELOPMENT</string>
    <string name="html">HTML</string>
    <string name="css">CSS</string>
    <string name="frameworks">FRAMEWORKS</string>
    <string name="javascript">JAVASCRIPT</string>
    <string name="js_python_java">JS/\nPYTHON/\nJAVA</string>
</resources>